--- a/Rabatseta.co/Web.config
+++ b/Rabatseta.co/Web.config
@@ -21,7 +21,7 @@
     </compilers>
   </system.codedom>
   <authentication mode="Forms">
-    <forms loginUrl="~/Auth/Logon" timeout="2880" />
+    <forms loginUrl="~/Views/Login/LoginPage" timeout="2880" />
   </authentication>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
